# my-gta

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  README.md  progress.md
.github/workflows/: quality-gate.yml
data/: map_block_loop.json  mission_driving_errand.json
data/assets/: ATTRIBUTION.md  asset_manifest.txt
data/assets/materials/: README.md
data/assets/models/: gruz_e36.gltf
data/assets/textures/: README.md
data/world/: README.md  block13_editor_overlay.json  mission_localization_pl.json  object_outcome_catalog.json  shop_items_catalog.json
docs/: README.md  art-direction-pivot-stylized-mid-poly.md  asset-pipeline.md  backend-modernization-grounding.md  blok-13-story-bible.md  blok-ekipa-world-dna.md  control-context-foundation.md  current-project-milestone-summary.md  current-state.md  d3d11-boot-spike.md  d3d11-mesh-material-implementation-checklist.md  d3d11-mesh-material-pipeline-plan.md  d3d11-modernization-milestone.md  d3d11-next-direction-decision.md  d3d11-renderer-smoke.md  early-osiedle-reality-audit.md  goal-alignment-shield-2026-05-09.md  goal-completion-audit-2026-05-09.md  goal-decision-checklist-template.md  goal-intellectual-safeguards-2026-05-09.md  goal-low-capacity-protocol-2026-05-09.md  goal-session-card-2026-05-09-spark-v10.md  goal-session-card-2026-05-09-spark-v11.md  goal-session-card-2026-05-09-spark-v12.md  goal-session-card-2026-05-09-spark-v13.md  goal-session-card-2026-05-09-spark-v14.md  goal-session-card-2026-05-09-spark-v15.md  goal-session-card-2026-05-09-spark-v16.md  goal-session-card-2026-05-09-spark-v17.md  goal-session-card-2026-05-09-spark-v18.md  goal-session-card-2026-05-09-spark-v19.md  goal-session-card-2026-05-09-spark-v2.md  goal-session-card-2026-05-09-spark-v20.md  goal-session-card-2026-05-09-spark-v21.md  goal-session-card-2026-05-09-spark-v22.md  goal-session-card-2026-05-09-spark-v23.md  goal-session-card-2026-05-09-spark-v24.md  goal-session-card-2026-05-09-spark-v25.md  goal-session-card-2026-05-09-spark-v26.md  goal-session-card-2026-05-09-spark-v27.md  (+29 more)
docs/superpowers/plans/: 2026-05-09-runtime-editor-foundation.md
docs/superpowers/specs/: 2026-05-09-grochow-target-vision-design.md  2026-05-09-runtime-editor-design.md  2026-05-13-grochow-district-blueprint.md
include/bs3d/backend/: BackendKinds.h
include/bs3d/core/: CameraRig.h  CharacterAction.h  CharacterPhysicalReaction.h  CharacterStatusPolicy.h  CharacterVaultPolicy.h  CharacterWorldHitPolicy.h  ChaseSystem.h  ControlContext.h  DialogueSystem.h  DriveRouteGuide.h  FixedTimestep.h  GameFeedback.h  InteractionResolver.h  MissionController.h  MissionTriggerSystem.h  NpcReactionSystem.h  ParagonMission.h  ParagonMissionSpec.h  PlayerController.h  PlayerMotor.h  PlayerPresentation.h  PrzypalSystem.h  RenderInterpolation.h  SaveGame.h  Scene.h  StoryState.h  Types.h  VehicleController.h  WorldCollision.h  WorldEventLedger.h  WorldInteraction.h  WorldRewirPressure.h  WorldServiceState.h
include/bs3d/game/: GameApp.h
include/bs3d/platform/: IInputReader.h  IPlatform.h
include/bs3d/render/: IRenderer.h  NullRenderer.h  RenderFrame.h  RenderFrameBuilder.h  RenderFrameValidation.h  RenderTypes.h  RendererFactory.h  WorldRenderList.h
src/core/: CameraRig.cpp  CharacterAction.cpp  CharacterPhysicalReaction.cpp  CharacterStatusPolicy.cpp  CharacterVaultPolicy.cpp  CharacterWorldHitPolicy.cpp  ChaseSystem.cpp  ControlContext.cpp  DialogueSystem.cpp  DriveRouteGuide.cpp  FixedTimestep.cpp  GameFeedback.cpp  InteractionResolver.cpp  MissionController.cpp  MissionTriggerSystem.cpp  NpcReactionSystem.cpp  ParagonMission.cpp  ParagonMissionSpec.cpp  PlayerController.cpp  PlayerMotor.cpp  PlayerPresentation.cpp  PrzypalSystem.cpp  RenderInterpolation.cpp  SaveGame.cpp  Scene.cpp  VehicleController.cpp  WorldCollision.cpp  WorldEventLedger.cpp  WorldInteraction.cpp  WorldRewirPressure.cpp  WorldServiceState.cpp
src/d3d11_spike/: D3D11Boot.cpp  D3D11BootDevice.cpp  D3D11BootDevice.h  D3D11BootMain.cpp  D3D11BootPipeline.cpp  D3D11BootPipeline.h  D3D11BootWindow.cpp  D3D11BootWindow.h
src/game/: CharacterArtModel.cpp  CharacterArtModel.h  CharacterDebugGeometry.cpp  CharacterDebugGeometry.h  CharacterPosePreview.cpp  CharacterPosePreview.h  ChaseAiRuntime.cpp  ChaseAiRuntime.h  ChaseVehicleRuntime.cpp  ChaseVehicleRuntime.h  D3D11ShadowSidecar.cpp  D3D11ShadowSidecar.h  DevTools.cpp  DevTools.h  EditorGizmo.cpp  EditorGizmo.h  EditorOverlayApply.cpp  EditorOverlayApply.h  EditorOverlayCodec.cpp  EditorOverlayCodec.h  EditorOverlayData.h  GameApp.cpp  GameHudLayout.cpp  GameHudLayout.h  GameHudPainter.cpp  GameHudPainter.h  GameHudRenderers.cpp  GameHudTextMetrics.cpp  GameHudTextMetrics.h  GameRenderers.cpp  GameRenderers.h  IntroLevelArteryDressing.cpp  IntroLevelAuthoring.h  IntroLevelBuilder.cpp  IntroLevelBuilder.h  IntroLevelCoreLayout.cpp  IntroLevelDressing.cpp  IntroLevelDressingSections.h  IntroLevelDressingUtils.h  IntroLevelGameplayData.cpp  (+45 more)
src/render/: CpuMeshData.cpp  CpuMeshData.h  CpuMeshLoader.cpp  CpuMeshLoader.h  MaterialRegistry.cpp  MaterialRegistry.h  MeshRegistry.cpp  MeshRegistry.h  RenderFrameDump.cpp  RenderFrameDump.h  RendererFactory.cpp
src/render_d3d11/: D3D11GameShell.cpp  D3D11MeshCache.cpp  D3D11MeshCache.h  D3D11MeshUploadAdapter.cpp  D3D11MeshUploadAdapter.h  D3D11Renderer.cpp  D3D11Renderer.h  D3D11RendererSmoke.cpp
tests/: core_tests.cpp  game_support_tests.cpp  render_frame_tests.cpp
tools/: ci_smoke.ps1  ci_verify.ps1  d3d11_shadow_smoke.ps1  generate_gruz_e36_gltf.py  generate_playground_models.py  renderframe_capture_replay.ps1  run_dev.ps1  run_release_smoke.ps1  test_validate_assets.py  test_validate_editor_overlay.py  test_validate_mission.py  test_validate_object_outcomes.py  test_validate_world_contract.py  validate_assets.py  validate_editor_overlay.py  validate_mission.py  validate_object_outcomes.py  validate_world_contract.py  verify_goal_guard.py
tools/BlokTools/: README.md
tools/BlokTools/BlokTools.App/: App.xaml  App.xaml.cs  BlokTools.App.csproj  MainWindow.xaml  (+1 more)
(+19 files in other folders)
